<resources>
    <string name="app_name">OuiCannes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_home_msg">Visit Explore and Interact with places throughout Cannes &amp; earn tokens to redeem for awesome prizes!</string>
    <string name="register">REGISTER</string>
    <string name="login">LOG IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_now">Register Now</string>
    <string name="already_signedin">Already registered?</string>
    <string name="sign_in_here">Sign In Here</string>
    <string name="redeem_points">Redeem Tokens</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="how_to">How Do I Earn Tokens?</string>
    <string name="partners">See Infillion\'s Partners</string>
    <string name="points_amount">You Have %1$d Tokens</string>
    <string name="choose_from_following">Choose From the Following Rewards:</string>
    <string name="prize_points_string">%1$s Tokens</string>
    <string name="visits_message">Visited %1$s for %2$d minutes </string>
    <string name="preference_file_key">com.example.ouicannes.PREFERENCE_FILE_KEY</string>
    <string name="is_logged_in">is_logged_in</string>
    <string name="user_id">user_id</string>
    <string name="events_key">events_key</string>
    <string name="points_key">points_key</string>
    <string name="hello_name">Hello, %1$s</string>
    <string name="permissions_desc">Unlock onsite reward opportunities and grow your digital wallet by enabling location services.\n\n\n Change to Always Allow to be able to earn tokens in the background.\n\n\nWe use Bluetooth to know when you\'re visiting an Infillion or Partner activation so we can alert you to special events and reward opportunities.</string>
</resources>