<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fill">

    <EditText
        android:id="@+id/name_et"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="Name"
        android:inputType="textPersonName"
        android:textColor="@color/primary_color"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/password_et"
        app:layout_constraintStart_toStartOf="@+id/password_et"
        app:layout_constraintTop_toBottomOf="@+id/password_et" />

    <EditText
        android:id="@+id/company_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="Company"
        android:textColor="@color/primary_color"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/title_et"
        app:layout_constraintStart_toStartOf="@+id/title_et"
        app:layout_constraintTop_toBottomOf="@+id/title_et" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/primary_color"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_now_tv" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/email_et"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/email_et"
        app:layout_constraintTop_toBottomOf="@+id/email_et" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/btn_color"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/primary_color"
        app:layout_constraintEnd_toEndOf="@+id/phonenumber_et"
        app:layout_constraintStart_toStartOf="@+id/phonenumber_et"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber_et" />

    <ImageView
        android:id="@+id/wecannes_iv"
        android:layout_width="0dp"
        android:layout_height="127dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/we_cannes_logo_lockuo"
        tools:srcCompat="@drawable/we_cannes_logo_lockuo" />

    <EditText
        android:id="@+id/title_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textColor="@color/primary_color"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/name_et"
        app:layout_constraintStart_toStartOf="@+id/name_et"
        app:layout_constraintTop_toBottomOf="@+id/name_et" />

    <EditText
        android:id="@+id/phonenumber_et"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@color/primary_color"
        app:layout_constraintEnd_toEndOf="@+id/company_et"
        app:layout_constraintStart_toStartOf="@+id/company_et"
        app:layout_constraintTop_toBottomOf="@+id/company_et" />

    <TextView
        android:id="@+id/register_now_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/register_now"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wecannes_iv"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/msg_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:text="@string/already_signedin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_btn" />

    <TextView
        android:id="@+id/sign_in_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:text="@string/sign_in_here"
        android:textColor="@android:color/holo_blue_dark"
        android:textIsSelectable="false"
        app:layout_constraintStart_toEndOf="@+id/msg_tv"
        app:layout_constraintTop_toBottomOf="@+id/submit_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>